--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
         </div>
         <form class="search-form">
           <fieldset class="search-form__fieldset">
-            <h2 class="search-form__fieldset-title">Город</h2>
+            <h2 class="search-form__fieldset-title search-form__fieldset_city">Город</h2>
             <label class="search-form__label">
               <span class="search-form__label-text visually-hidden">Город</span>
               <input
                 type="text"
                 placeholder="Санкт Петербург, например"
                 name="city"
-                class="search-form__textfield"
+                class="search-form__textfield search-form__fieldset_city"
               />
             </label>
           </fieldset>
