--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
         </div>
         <form class="search-form">
           <fieldset class="search-form__fieldset">
-            <h2 class="search-form__fieldset-title search-form__fieldset_city">Город</h2>
+            <h2 class="search-form__fieldset-title">Город</h2>
             <label class="search-form__label">
               <span class="search-form__label-text visually-hidden">Город</span>
               <input
                 type="text"
                 placeholder="Санкт Петербург, например"
                 name="city"
-                class="search-form__textfield search-form__fieldset_city"
+                class="search-form__textfield"
               />
             </label>
           </fieldset>
@@ -108,7 +108,7 @@
       </li>
     </template>
     <template class="more-button-template">
-      <button class="button more-button">Показать еще</button>
+      <button class="button more-button more-buttom">Показать еще</button>
     </template>
 
     <template class="error-template">
